@@ -30,6 +30,8 @@ version 1.9.5, in progress
 - Fix bug: spurious "unmatched 'if'" error under some conditions
 - Fix bug: incorrect handling of observation markers in context of
   scatter plot "with factor separation"
+- Fix bug: transposition not being done in expressions of the form
+  matrix m = $accessor[<range>]', with trailing transpose symbol
 
 2011-02-24 version 1.9.4
 - Change the default random number generator from GLib's 
